--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 
 .grid {
   display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: 120px 1fr 40px;
+  grid-template-rows: 60px;
   grid-gap: 5px;
 }
 
