--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: 120px 1fr 40px;
+  grid-template-columns: repeat(2, 50px 1fr) 100px;
   grid-template-rows: 60px;
   grid-gap: 5px;
 }
