--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 .container {
-  max-width: 600px;
+  max-width: 1000px;
   height: 400px;
   border: 2px blue dotted;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 50px 1fr) 100px;
-  grid-template-rows: 60px;
+  grid-template-columns: minmax(200px, 500px) repeat(2, minmax(100px, 1fr));
+  grid-template-rows: 250px;
   grid-gap: 5px;
 }
 
