--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,12 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(3, 300px);
   grid-template-rows: 250px;
   grid-gap: 5px;
+
+  align-content: center;
+  justify-content: center;
 }
 
 .child {
