--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,11 @@
 .container {
-  max-width: 1500px;
-  height: 800px;
+  max-width: 800px;
   border: 2px blue dotted;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 300px);
-  grid-template-rows: 250px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 5px;
 
   align-content: center;
@@ -16,5 +14,12 @@
 
 .child {
   background-color: lightgray;
-  height: 250px;
+  height: 200px;
+}
+
+.banner {
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+  /* grid-column-start: 1;
+  grid-column-end: 4; */
 }
