--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(3, 200px);
   grid-gap: 5px;
 
   align-content: center;
@@ -14,7 +15,10 @@
 
 .child {
   background-color: lightgray;
-  height: 200px;
+}
+
+.side {
+  grid-row: 2 / 4;
 }
 
 .banner {
