--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,14 @@
 }
 
 .side {
-  grid-row: 2 / 4;
+  grid-row: span 2;
+  /* grid-row: 2 / 4; */
 }
 
 .banner {
-  grid-column: 1 / 4;
-  grid-row: 1 / 2;
+  grid-column: span 3;
+  /* grid-column: 1 / 4;
+  grid-row: 1 / 2; */
   /* grid-column-start: 1;
   grid-column-end: 4; */
 }
