--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,47 @@
 .container {
-  max-width: 800px;
+  max-width: 100vw;
+  height: 100vh;
   border: 2px blue dotted;
+}
+
+.container > * {
+  background-color: lightgray;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-rows: repeat(3, 200px);
-  grid-gap: 5px;
-
-  align-content: center;
-  justify-content: center;
+  grid-gap: 10px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-areas: 
+    'header header header header'
+    'nav main main main'
+    'nav main main main'
+    'nav section section section'
+    'nav aside aside aside'
+    'footer footer footer footer'
+  ;
 }
 
-.child {
-  background-color: lightgray;
+header {
+  grid-area: header;
 }
 
-.side {
-  grid-row: span 2;
-  /* grid-row: 2 / 4; */
+nav {
+  grid-area: nav;
 }
 
-.banner {
-  grid-column: span 3;
-  /* grid-column: 1 / 4;
-  grid-row: 1 / 2; */
-  /* grid-column-start: 1;
-  grid-column-end: 4; */
+main {
+  grid-area: main;
+}
+
+aside {
+  grid-area: aside;
+}
+
+section {
+  grid-area: section;
+}
+
+footer {
+  grid-area: footer;
 }
