--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,37 @@
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-areas: 
+  grid-template-areas:
     'header header header header'
-    'nav main main main'
-    'nav main main main'
-    'nav section section section'
-    'nav aside aside aside'
-    'footer footer footer footer'
-  ;
+    'nav nav nav nav'
+    'main main main main'
+    'section section section section'
+    'aside aside aside aside'
+    'footer footer footer footer';
+}
+
+@media screen and (min-width: 500px) {
+  /* From 500px upwards */
+  .grid {
+    grid-template-areas:
+      'header header header header'
+      'nav main main main'
+      'nav main main main'
+      'nav section section section'
+      'nav aside aside aside'
+      'footer footer footer footer';
+  }
+}
+
+@media screen and (min-width: 750px) {
+  /* From 750px upwards */
+  .grid {
+    grid-template-areas:
+      'header header header header'
+      'nav main main section'
+      'nav main main aside'
+      'footer footer footer footer';
+  }
 }
 
 header {
